# rovi_visual_teach

./: CMakeLists.txt  CheckSheet.md  CollisionChecker.md  ConformityRobot.md  Default.perspective  Install.sh  README.md  REQUIRE.md  ReleaseNote.md  StandAlone.md  StartVT.desktop  Teaching.md  config.yaml  config_tf.yaml  dashboard.yaml  demo.launch  demo_tf.yaml  launch_masterteach.sh  launch_rqt_param_manager.sh  main.launch  main.rviz  main.ui  master_param.yaml  masterteach.launch  masterteach.pmconf  masterteachSxga.sh  masterteachVga.sh  masterteach_socket.js  masterteach_solver.py  masterteach_ui.py  package.xml  panel.yaml  param.yaml  rcalib.yaml  recipe  regist_master_sample  rqt_param_manager.launch  sample.ply  setup.launch  setup.py  (+4 more)
conf.d/: config.yaml  hand_eye.yaml  world_eye.yaml
config_tf.d/: demo.yaml  dummy_j6.yaml  dummy_world.yaml  ur_j5.yaml
dashboard.d/: demo.yaml  rv4f_sxga.yaml  ur5_sxga.yaml
launch/: dashboard.launch  demo.launch  main.launch  setup.launch  start.launch  viewer.launch
rc.d/: demo.yaml  dummy.yaml  dummy_sxga.yaml  kuka.yaml  kuka_sxga.yaml  kw.yaml  kw_sxga.yaml  mazda.yaml  melfa.yaml  motoman.yaml  motoman_sxga.yaml  nachi.yaml  rv4f.yaml  rv4f_sxga.yaml  std.yaml  ur.yaml  ur5.yaml  ur5_J7.yaml  ur5_sxga.yaml  ur5_sxga_J7.yaml  ur5_sxga_J7_nd.yaml
recipe/: camera_master0.yaml  param.yaml  surface.ply
recipe.d/10/: camera_master0.yaml  param.yaml  surface.ply
recipe.d/11/: camera_master0.yaml  param.yaml
recipe.d/12/: camera_master0.yaml  (+2 more)
uml/: capture.seq  component.uml  object.uxf  solve.seq  usecase.uxf
(+11 files in other folders)
