<?xml version="1.0"?>
<package format="2">
  <name>rovi_visual_teach</name>
  <version>1.0.0</version>
  <description>MasterTeach Method</description>

  <maintainer email="yoods@todo.todo">YOODS</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/yoods/rovi_utils/cropper</url>
  <author email="yoods@todo.todo">YOODS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
